feat: block updates from an email address
