# be/api/handler/init_handler.go
@@ -5,15 +5,17 @@ import (
 )
 
 type Handlers struct {
-	User         *UserHandler
-	Friendship   *FriendshipHandler
-	Subscription *SubscriptionHandler
+	User              *UserHandler
+	Friendship        *FriendshipHandler
+	Subscription      *SubscriptionHandler
+	BlockRelationship *BlockRelationshipHandler
 }
 
 func NewHandlers(services *service.Service) *Handlers {
 	return &Handlers{
-		User:         NewUserHandler(services.User),
-		Friendship:   NewFriendshipHandler(services.Friendship),
-		Subscription: NewSubscriptionHandler(services.Subscription),
+		User:              NewUserHandler(services.User),
+		Friendship:        NewFriendshipHandler(services.Friendship),
+		Subscription:      NewSubscriptionHandler(services.Subscription),
+		BlockRelationship: NewBlockRelationshipHandler(services.BlockRelationship),
 	}
 }
