# be/api/router/init_router.go
@@ -12,4 +12,5 @@ func SetupRoutes(r *gin.Engine, handlers *handler.Handlers, db *gorm.DB) {
 	registerUserRoutes(api, handlers.User, db)
 	registerFriendshipRoutes(api, handlers.Friendship, db)
 	registerSubscriptionRoutes(api, handlers.Subscription, db)
+	registerBlockRoutes(api, handlers.BlockRelationship, db)
 }
